<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addJugador.AddJugadorActivity">

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/editTextTitulos"
        app:layout_constraintTop_toBottomOf="@id/editTextNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/porteroButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/portero" />

        <RadioButton
            android:id="@+id/defensaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defensa" />

        <RadioButton
            android:id="@+id/mediocentroButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mediocentro" />

        <RadioButton
            android:id="@+id/delanteroButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delantero" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTextTitulos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/titulos"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintBottom_toTopOf="@id/anyadirButton"
        tools:ignore="MissingConstraints"
        android:autofillHints="" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/anyadirButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/a_adir_jugador"
        android:text="@string/a_adir_jugador"
        app:icon="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitulos"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>