<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/editTextEquipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equipo"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvEstadio"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvEstadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estadio"
        app:layout_constraintStart_toEndOf="@+id/editTextEquipo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
        app:layout_constraintEnd_toStartOf="@id/tvJugadores"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvJugadores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jugadores"
        app:layout_constraintStart_toEndOf="@+id/tvEstadio"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewEquipos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="261dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="39dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addEquipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:contentDescription="@string/addequipo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24"
        tools:ignore="MissingConstraints,RtlHardcoded" />


</androidx.constraintlayout.widget.ConstraintLayout>